Fixed create an update swagger ui and parameters
